--- a/Changes
+++ b/Changes
@@ -5,3 +5,6 @@ Revision history for SPLAT
 
 0.02    201811261846 
         First serious release attempt.  Expect minor rev burn.
+
+0.03    201811261919
+        La partie continue
