--- a/Changes
+++ b/Changes
@@ -8,3 +8,7 @@ Revision history for SPLAT
 
 0.03    201811261919
         La partie continue
+
+0.04    201811262045
+        Closing in on something disgusting but vaguely plausible.
+        
