--- a/Changes
+++ b/Changes
@@ -11,4 +11,7 @@ Revision history for SPLAT
 
 0.04    201811262045
         Closing in on something disgusting but vaguely plausible.
+
+0.05    201811262053
+        Typoe killed the radi04
         
