--- a/Changes
+++ b/Changes
@@ -14,4 +14,6 @@ Revision history for SPLAT
 
 0.05    201811262053
         Typoe killed the radi04
-        
+
+1.001   201811262215
+        Going real
