--- a/Changes
+++ b/Changes
@@ -17,3 +17,7 @@ Revision history for SPLAT
 
 1.001   201811262215
         Going real
+
+1.002   201811282148
+        New demo DLA.splat; minor cleanups
+        
