--- a/Changes
+++ b/Changes
@@ -20,4 +20,7 @@ Revision history for SPLAT
 
 1.002   201811282148
         New demo DLA.splat; minor cleanups
+
+1.003   201811282249
+        Ditto, except actually push to master grr
         
