--- a/Changes
+++ b/Changes
@@ -24,3 +24,6 @@ Revision history for SPLAT
 1.003   201811282249
         Ditto, except actually push to master grr
         
+1.004   201812050713
+        Making another run at getting packages out for bionic
+
